// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test cases for Perspective details Page should be able to render no data page 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main perspectiveHeader StyledProps--flex"
        style="align-items: center;"
      >
        <div
          class="StyledProps--font StyledProps--main"
          style="flex-grow: 1;"
        >
          <div
            class="breadcrumbs"
          >
            <div>
              <a
                class="breadcrumb"
                href="/account/undefined/ce/perspectives"
              >
                ce.perspectives.sideNavText
              </a>
              <span
                class="bp3-icon StyledProps--main separator"
                data-icon="main-chevron-right"
              >
                <svg
                  height="11"
                  viewBox="0 0 8 14"
                  width="11"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
            <div>
              <span
                class="lastBreadcrumb"
              />
            </div>
          </div>
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800"
            level="2"
            style="flex-grow: 1;"
          >
            AWS_GCP
          </h2>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withLeftIcon"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
            icon="edit"
          >
            <svg
              data-icon="edit"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            edit
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main pageBody"
    data-name="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--background-white StyledProps--padding-small"
    >
      <div
        class="StyledProps--font StyledProps--main mainContainer"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="ng-filter"
        >
          <svg
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M16.5 8V7H19a.5.5 0 000-1h-2.5V5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0zM5 11.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 010-1zM5 17a.5.5 0 000 1h7v1a.5.5 0 001 0v-1h6a.5.5 0 000-1h-6v-1a.5.5 0 00-1 0v1H5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <section
            class="filtersContainer"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                + add filter
              </span>
            </button>
          </section>
        </div>
        <span
          style="flex-grow: 1;"
        />
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main timeRangeButton StyledProps--intent-primary StyledProps--padding-small Button--with-current-color Button--without-shadow Button--withLeftIcon Button--withRightIcon"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-calendar StyledProps--main StyledProps--padding-right-xsmall"
                icon="calendar"
              >
                <svg
                  data-icon="calendar"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    calendar
                  </desc>
                  <path
                    d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                ce.perspectives.timeRangeConstants.last7Days
              </span>
              <span
                class="bp3-icon bp3-icon-caret-down StyledProps--main"
                icon="caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    caret-down
                  </desc>
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7"
        >
          |
        </p>
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main timeGranularityButton StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withRightIcon"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                ce.perspectives.timeAggregation.daily
              </span>
              <span
                class="bp3-icon bp3-icon-caret-down StyledProps--main"
                icon="caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    caret-down
                  </desc>
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--margin-xlarge"
    >
      <div
        class="bp3-card bp3-elevation-1 Card--card"
      >
        <div
          class="StyledProps--font StyledProps--main mainCard"
        />
      </div>
      <div
        class="bp3-card bp3-elevation-1 Card--card"
      >
        <div
          class="StyledProps--font StyledProps--main mainCard budgetCard"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-small"
          >
            ce.perspectives.budgets.title
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-medium"
          >
            $---
          </p>
          <p
            class="StyledProps--font StyledProps--main addBudgetText StyledProps--color StyledProps--color-primary7 StyledProps--font-small"
          >
            ce.perspectives.budgets.addBudget
          </p>
        </div>
      </div>
      <div
        class="bp3-card bp3-elevation-1 Card--card"
      >
        <div
          class="StyledProps--font StyledProps--main mainCard"
        />
      </div>
      <div
        class="bp3-card bp3-elevation-1 Card--card"
      >
        <div
          class="StyledProps--font StyledProps--main mainCard"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-small"
          >
            ce.recommendation.sideNavText
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-top-large StyledProps--margin-bottom-small StyledProps--font-variation-body1"
            style="display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
              data-icon="money-icon"
            >
              <svg
                fill="none"
                height="21"
                viewBox="0 0 34 31"
                width="21"
                xmlns="http://www.w3.org/2000/svg"
              >
                <ellipse
                  fill="#EFF2F4"
                  rx="15.517"
                  ry="2.311"
                  transform="matrix(1 0 0 -1 15.517 27.96)"
                />
                <rect
                  fill="#629D00"
                  height="12.197"
                  rx="4"
                  stroke="#629D00"
                  width="25.09"
                  x="1.321"
                  y="15.084"
                />
                <rect
                  fill="#69C800"
                  height="12.197"
                  rx="4"
                  width="25.09"
                  x="1.321"
                  y="15.084"
                />
                <rect
                  fill="#AADE63"
                  height="9.686"
                  rx="4"
                  width="23"
                  x="2.505"
                  y="16.448"
                />
                <path
                  clip-rule="evenodd"
                  d="M6.226 15.515a4 4 0 00-4 4v.78a4 4 0 013.998-3.874h15.348a4 4 0 014 4v3.73a4.09 4.09 0 00.002-.126v-4.51a4 4 0 00-4-4H6.226z"
                  fill="#D6F4BC"
                  fill-rule="evenodd"
                />
                <ellipse
                  cx="5.92"
                  cy="21.307"
                  fill="#7ACE00"
                  rx="1.394"
                  ry="1.435"
                />
                <ellipse
                  cx="22.09"
                  cy="21.273"
                  fill="#7ACE00"
                  rx="1.394"
                  ry="1.435"
                />
                <ellipse
                  cx="14.144"
                  cy="21.398"
                  fill="#7ACE00"
                  rx="3.485"
                  ry="3.587"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.969 21.723a1.084 1.084 0 00-.173-.32 1.29 1.29 0 00-.691-.45c-.062-.015-.165-.042-.308-.076-.134-.035-.28-.07-.43-.107-.15-.038-.284-.073-.407-.103a4.695 4.695 0 00-.207-.05 1.05 1.05 0 01-.404-.198.45.45 0 01-.153-.362c0-.11.027-.202.08-.274a.618.618 0 01.208-.176 1.07 1.07 0 01.276-.091c.1-.02.2-.03.296-.03.284 0 .519.056.703.175.184.114.288.316.311.594h.822c0-.228-.05-.43-.146-.602a1.338 1.338 0 00-.392-.438 1.836 1.836 0 00-.572-.267 3.225 3.225 0 00-.288-.053v-.416a.384.384 0 00-.768 0v.412a1.963 1.963 0 00-.261.05c-.208.049-.392.129-.553.232-.162.107-.292.24-.392.4-.1.164-.15.354-.15.572 0 .114.015.225.05.335.034.11.088.214.169.313.08.099.184.187.319.267.134.08.303.144.503.194.326.08.599.145.822.198.223.05.415.107.584.16a.705.705 0 01.264.168c.081.08.123.202.123.37 0 .08-.019.16-.053.24a.52.52 0 01-.173.21c-.08.06-.18.11-.311.148a1.992 1.992 0 01-.926.004 1.228 1.228 0 01-.38-.164.784.784 0 01-.258-.29.911.911 0 01-.092-.426h-.818c.004.27.058.503.165.7.104.199.246.359.423.485s.38.22.618.282c.104.027.215.046.327.06v.416a.384.384 0 00.768 0v-.4c.115-.011.234-.03.346-.057.222-.05.422-.13.599-.24.177-.11.319-.252.426-.423.108-.172.161-.381.161-.625 0-.118-.019-.233-.057-.347z"
                  fill="#fff"
                  fill-rule="evenodd"
                />
                <g>
                  <rect
                    fill="#629D00"
                    height="11.978"
                    rx="4"
                    stroke="#629D00"
                    transform="rotate(21 6.63 7.337)"
                    width="25.119"
                    x="6.63"
                    y="7.337"
                  />
                  <rect
                    fill="#69C800"
                    height="11.978"
                    rx="4"
                    transform="rotate(21 6.63 7.337)"
                    width="25.119"
                    x="6.63"
                    y="7.337"
                  />
                  <rect
                    fill="#AADE63"
                    height="9.512"
                    rx="4"
                    transform="rotate(21 7.258 9.012)"
                    width="23.026"
                    x="7.258"
                    y="9.012"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M11.06 9.49a4 4 0 00-5.168 2.3l-.274.713a4 4 0 015.12-2.183l14.354 5.51a4 4 0 012.3 5.168l-1.261 3.288.047-.118 1.536-4A4 4 0 0025.413 15L11.06 9.49z"
                    fill="#D6F4BC"
                    fill-rule="evenodd"
                  />
                  <ellipse
                    cx="8.739"
                    cy="14.692"
                    fill="#7ACE00"
                    rx="1.396"
                    ry="1.409"
                    transform="rotate(21 8.74 14.692)"
                  />
                  <ellipse
                    cx="23.864"
                    cy="20.462"
                    fill="#7ACE00"
                    rx="1.396"
                    ry="1.409"
                    transform="rotate(21 23.864 20.462)"
                  />
                  <ellipse
                    cx="16.394"
                    cy="17.726"
                    fill="#7ACE00"
                    rx="3.489"
                    ry="3.523"
                    transform="rotate(21 16.394 17.726)"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17.985 18.678a1.059 1.059 0 00-.049-.355 1.278 1.278 0 00-.175-.348 1.518 1.518 0 00-.313-.313l-.26-.18c-.114-.08-.238-.163-.365-.252l-.344-.24c-.1-.071-.16-.11-.177-.12a1.058 1.058 0 01-.307-.326.437.437 0 01-.016-.388.434.434 0 01.172-.222.616.616 0 01.256-.087 1.09 1.09 0 01.29.016c.1.018.198.043.288.078.265.102.464.238.595.413.132.17.158.393.081.657l.768.294c.081-.21.105-.412.076-.604-.03-.192-.1-.375-.212-.542a1.854 1.854 0 00-.691-.603l.146-.38a.38.38 0 00-.225-.488.38.38 0 00-.493.212l-.145.377a2.002 2.002 0 00-.262-.048 1.82 1.82 0 00-.598.015c-.189.04-.358.115-.507.226a1.043 1.043 0 00-.342.47c-.04.105-.064.212-.071.326a.904.904 0 00.048.347c.04.12.107.237.204.359.098.122.233.242.402.359l.698.476c.191.126.35.247.49.357a.709.709 0 01.188.248c.048.103.044.23-.015.384a.583.583 0 01-.135.2.515.515 0 01-.235.13.951.951 0 01-.343.025 2.039 2.039 0 01-.867-.329c-.12-.082-.219-.18-.297-.286a.775.775 0 01-.139-.358.88.88 0 01.064-.424l-.764-.294a1.44 1.44 0 00-.093.702c.027.22.104.417.225.596.12.178.277.339.479.48.087.062.184.12.283.173l-.146.381a.38.38 0 00.225.487.38.38 0 00.493-.211l.14-.367c.112.03.23.056.344.071.226.035.44.033.645-.005.204-.038.386-.116.547-.235.16-.118.285-.291.37-.515.042-.108.064-.22.069-.339z"
                    fill="#fff"
                    fill-rule="evenodd"
                  />
                </g>
                <g>
                  <rect
                    fill="#629D00"
                    height="11.978"
                    rx="4"
                    stroke="#629D00"
                    transform="rotate(52 17.576 1)"
                    width="25.119"
                    x="17.576"
                    y="1"
                  />
                  <rect
                    fill="#69C800"
                    height="11.978"
                    rx="4"
                    transform="rotate(52 17.576 1)"
                    width="25.119"
                    x="17.576"
                    y="1"
                  />
                  <rect
                    fill="#AADE63"
                    height="9.512"
                    rx="4"
                    transform="rotate(52 17.25 2.759)"
                    width="23.026"
                    x="17.251"
                    y="2.759"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M20.264 5.127a4 4 0 00-5.615-.69l-.602.47a4 4 0 015.514.766l9.465 12.116a4 4 0 01-.69 5.614l-2.775 2.169c.034-.025.068-.05.102-.077l3.377-2.638a4 4 0 00.69-5.615L20.263 5.127z"
                    fill="#D6F4BC"
                    fill-rule="evenodd"
                  />
                  <ellipse
                    cx="15.595"
                    cy="8.391"
                    fill="#7ACE00"
                    rx="1.396"
                    ry="1.409"
                    transform="rotate(52 15.595 8.391)"
                  />
                  <ellipse
                    cx="25.588"
                    cy="21.127"
                    fill="#7ACE00"
                    rx="1.396"
                    ry="1.409"
                    transform="rotate(52 25.588 21.127)"
                  />
                  <ellipse
                    cx="20.593"
                    cy="14.934"
                    fill="#7ACE00"
                    rx="3.489"
                    ry="3.523"
                    transform="rotate(52 20.593 14.934)"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M21.467 16.57c.065-.1.112-.21.142-.33.029-.12.037-.25.028-.389a1.523 1.523 0 00-.107-.428c-.026-.058-.069-.156-.13-.289-.056-.127-.12-.263-.183-.404a77.632 77.632 0 00-.26-.577 1.058 1.058 0 01-.096-.438.437.437 0 01.186-.34.434.434 0 01.262-.102.618.618 0 01.264.057c.084.042.164.096.24.163.077.068.147.14.207.215.175.224.275.444.297.66.025.215-.067.42-.268.606l.506.648c.177-.138.303-.3.377-.48.073-.179.108-.371.097-.573a1.851 1.851 0 00-.282-.873l.321-.25a.38.38 0 00.058-.534.38.38 0 00-.531-.073l-.319.25a2.013 2.013 0 00-.2-.177 1.822 1.822 0 00-.52-.296 1.291 1.291 0 00-.551-.067c-.189.02-.367.096-.535.228a1.07 1.07 0 00-.229.242.898.898 0 00-.137.322c-.027.124-.031.258-.01.413.02.154.075.327.16.514.139.306.256.56.353.769.099.205.173.391.236.557a.709.709 0 01.033.31c-.012.113-.08.22-.21.321a.586.586 0 01-.22.103.515.515 0 01-.268-.01.948.948 0 01-.307-.155 2.033 2.033 0 01-.574-.728 1.243 1.243 0 01-.107-.4.775.775 0 01.066-.378.88.88 0 01.273-.33l-.504-.646a1.44 1.44 0 00-.44.554c-.09.202-.127.411-.115.626.012.216.063.434.163.659.043.098.097.197.154.294l-.322.251a.38.38 0 00-.058.534c.13.166.37.2.532.073l.31-.242c.08.084.168.166.257.238.175.145.36.255.555.327.194.073.391.1.59.08.199-.018.395-.102.583-.25.091-.071.168-.156.233-.255z"
                    fill="#fff"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
            $--
          </p>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main chartGridContainer StyledProps--margin-xlarge StyledProps--background-white"
    >
      <div
        class="StyledProps--font StyledProps--main chartGridContainer empty"
      >
        <img
          src="test-file-stub"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-large StyledProps--margin-bottom-xsmall StyledProps--font-small StyledProps--color StyledProps--color-grey500"
          style="font-weight: 600;"
        >
          ce.pageErrorMsg.noDataMsg
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-small"
        >
          ce.pageErrorMsg.perspectiveNoData
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`test cases for Perspective details Page should be able to render the details page 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main perspectiveHeader StyledProps--flex"
        style="align-items: center;"
      >
        <div
          class="StyledProps--font StyledProps--main"
          style="flex-grow: 1;"
        >
          <div
            class="breadcrumbs"
          >
            <div>
              <a
                class="breadcrumb"
                href="/account/undefined/ce/perspectives"
              >
                ce.perspectives.sideNavText
              </a>
              <span
                class="bp3-icon StyledProps--main separator"
                data-icon="main-chevron-right"
              >
                <svg
                  height="11"
                  viewBox="0 0 8 14"
                  width="11"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
            <div>
              <span
                class="lastBreadcrumb"
              />
            </div>
          </div>
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800"
            level="2"
            style="flex-grow: 1;"
          >
            AWS_GCP
          </h2>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withLeftIcon"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
            icon="edit"
          >
            <svg
              data-icon="edit"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            edit
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main pageBody"
    data-name="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--background-white StyledProps--padding-small"
    >
      <div
        class="StyledProps--font StyledProps--main mainContainer"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="ng-filter"
        >
          <svg
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M16.5 8V7H19a.5.5 0 000-1h-2.5V5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0zM5 11.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 010-1zM5 17a.5.5 0 000 1h7v1a.5.5 0 001 0v-1h6a.5.5 0 000-1h-6v-1a.5.5 0 00-1 0v1H5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <section
            class="filtersContainer"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                + add filter
              </span>
            </button>
          </section>
        </div>
        <span
          style="flex-grow: 1;"
        />
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main timeRangeButton StyledProps--intent-primary StyledProps--padding-small Button--with-current-color Button--without-shadow Button--withLeftIcon Button--withRightIcon"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-calendar StyledProps--main StyledProps--padding-right-xsmall"
                icon="calendar"
              >
                <svg
                  data-icon="calendar"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    calendar
                  </desc>
                  <path
                    d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                ce.perspectives.timeRangeConstants.last7Days
              </span>
              <span
                class="bp3-icon bp3-icon-caret-down StyledProps--main"
                icon="caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    caret-down
                  </desc>
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7"
        >
          |
        </p>
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main timeGranularityButton StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withRightIcon"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                ce.perspectives.timeAggregation.daily
              </span>
              <span
                class="bp3-icon bp3-icon-caret-down StyledProps--main"
                icon="caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    caret-down
                  </desc>
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--margin-xlarge"
    >
      <div
        class="bp3-card bp3-elevation-1 Card--card"
      >
        <div
          class="StyledProps--font StyledProps--main mainCard"
        />
      </div>
      <div
        class="bp3-card bp3-elevation-1 Card--card"
      >
        <div
          class="StyledProps--font StyledProps--main mainCard budgetCard"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-small"
          >
            ce.perspectives.budgets.budgetMonthlyTxt
          </p>
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
            style="align-items: flex-end;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--color StyledProps--color-black"
            >
              $2,000,000.00
            </p>
            <p
              class="StyledProps--font StyledProps--main thisMonthText StyledProps--color StyledProps--color-grey400 StyledProps--font-xsmall"
            >
              ce.perspectives.budgets.thisMonth
            </p>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main spendText StyledProps--color StyledProps--color-grey500 StyledProps--font-variation-tiny"
            >
              ce.perspectives.budgets.monthToDateSpend
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-variation-tiny-semi"
            >
              39%
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-variation-tiny"
            >
              ce.perspectives.budgets.budgetSmallTxt
            </p>
          </div>
          <div
            class="indicatorBar indicatorBarWithPattern"
          />
          <div
            class="StyledProps--font StyledProps--main indicatorBar StyledProps--background-green500"
            style="width: 262px;"
          />
        </div>
      </div>
      <div
        class="bp3-card bp3-elevation-1 Card--card"
      >
        <div
          class="StyledProps--font StyledProps--main mainCard"
        />
      </div>
      <div
        class="bp3-card bp3-elevation-1 Card--card"
      >
        <div
          class="StyledProps--font StyledProps--main mainCard"
        >
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-small"
            >
              ce.recommendation.sideNavText
            </p>
            <span
              style="flex-grow: 1;"
            />
            <p
              class="StyledProps--font StyledProps--main viewLink StyledProps--color StyledProps--color-primary7 StyledProps--font-small"
            >
              ce.perspectives.recommendations.viewText
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400 StyledProps--margin-top-xsmall StyledProps--font-variation-tiny"
          >
            ce.perspectives.recommendations.recommendationCountTxt
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-top-xsmall StyledProps--margin-bottom-xsmall StyledProps--font-variation-body1"
            style="display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
              data-icon="money-icon"
            >
              <svg
                fill="none"
                height="21"
                viewBox="0 0 34 31"
                width="21"
                xmlns="http://www.w3.org/2000/svg"
              >
                <ellipse
                  fill="#EFF2F4"
                  rx="15.517"
                  ry="2.311"
                  transform="matrix(1 0 0 -1 15.517 27.96)"
                />
                <rect
                  fill="#629D00"
                  height="12.197"
                  rx="4"
                  stroke="#629D00"
                  width="25.09"
                  x="1.321"
                  y="15.084"
                />
                <rect
                  fill="#69C800"
                  height="12.197"
                  rx="4"
                  width="25.09"
                  x="1.321"
                  y="15.084"
                />
                <rect
                  fill="#AADE63"
                  height="9.686"
                  rx="4"
                  width="23"
                  x="2.505"
                  y="16.448"
                />
                <path
                  clip-rule="evenodd"
                  d="M6.226 15.515a4 4 0 00-4 4v.78a4 4 0 013.998-3.874h15.348a4 4 0 014 4v3.73a4.09 4.09 0 00.002-.126v-4.51a4 4 0 00-4-4H6.226z"
                  fill="#D6F4BC"
                  fill-rule="evenodd"
                />
                <ellipse
                  cx="5.92"
                  cy="21.307"
                  fill="#7ACE00"
                  rx="1.394"
                  ry="1.435"
                />
                <ellipse
                  cx="22.09"
                  cy="21.273"
                  fill="#7ACE00"
                  rx="1.394"
                  ry="1.435"
                />
                <ellipse
                  cx="14.144"
                  cy="21.398"
                  fill="#7ACE00"
                  rx="3.485"
                  ry="3.587"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.969 21.723a1.084 1.084 0 00-.173-.32 1.29 1.29 0 00-.691-.45c-.062-.015-.165-.042-.308-.076-.134-.035-.28-.07-.43-.107-.15-.038-.284-.073-.407-.103a4.695 4.695 0 00-.207-.05 1.05 1.05 0 01-.404-.198.45.45 0 01-.153-.362c0-.11.027-.202.08-.274a.618.618 0 01.208-.176 1.07 1.07 0 01.276-.091c.1-.02.2-.03.296-.03.284 0 .519.056.703.175.184.114.288.316.311.594h.822c0-.228-.05-.43-.146-.602a1.338 1.338 0 00-.392-.438 1.836 1.836 0 00-.572-.267 3.225 3.225 0 00-.288-.053v-.416a.384.384 0 00-.768 0v.412a1.963 1.963 0 00-.261.05c-.208.049-.392.129-.553.232-.162.107-.292.24-.392.4-.1.164-.15.354-.15.572 0 .114.015.225.05.335.034.11.088.214.169.313.08.099.184.187.319.267.134.08.303.144.503.194.326.08.599.145.822.198.223.05.415.107.584.16a.705.705 0 01.264.168c.081.08.123.202.123.37 0 .08-.019.16-.053.24a.52.52 0 01-.173.21c-.08.06-.18.11-.311.148a1.992 1.992 0 01-.926.004 1.228 1.228 0 01-.38-.164.784.784 0 01-.258-.29.911.911 0 01-.092-.426h-.818c.004.27.058.503.165.7.104.199.246.359.423.485s.38.22.618.282c.104.027.215.046.327.06v.416a.384.384 0 00.768 0v-.4c.115-.011.234-.03.346-.057.222-.05.422-.13.599-.24.177-.11.319-.252.426-.423.108-.172.161-.381.161-.625 0-.118-.019-.233-.057-.347z"
                  fill="#fff"
                  fill-rule="evenodd"
                />
                <g>
                  <rect
                    fill="#629D00"
                    height="11.978"
                    rx="4"
                    stroke="#629D00"
                    transform="rotate(21 6.63 7.337)"
                    width="25.119"
                    x="6.63"
                    y="7.337"
                  />
                  <rect
                    fill="#69C800"
                    height="11.978"
                    rx="4"
                    transform="rotate(21 6.63 7.337)"
                    width="25.119"
                    x="6.63"
                    y="7.337"
                  />
                  <rect
                    fill="#AADE63"
                    height="9.512"
                    rx="4"
                    transform="rotate(21 7.258 9.012)"
                    width="23.026"
                    x="7.258"
                    y="9.012"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M11.06 9.49a4 4 0 00-5.168 2.3l-.274.713a4 4 0 015.12-2.183l14.354 5.51a4 4 0 012.3 5.168l-1.261 3.288.047-.118 1.536-4A4 4 0 0025.413 15L11.06 9.49z"
                    fill="#D6F4BC"
                    fill-rule="evenodd"
                  />
                  <ellipse
                    cx="8.739"
                    cy="14.692"
                    fill="#7ACE00"
                    rx="1.396"
                    ry="1.409"
                    transform="rotate(21 8.74 14.692)"
                  />
                  <ellipse
                    cx="23.864"
                    cy="20.462"
                    fill="#7ACE00"
                    rx="1.396"
                    ry="1.409"
                    transform="rotate(21 23.864 20.462)"
                  />
                  <ellipse
                    cx="16.394"
                    cy="17.726"
                    fill="#7ACE00"
                    rx="3.489"
                    ry="3.523"
                    transform="rotate(21 16.394 17.726)"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17.985 18.678a1.059 1.059 0 00-.049-.355 1.278 1.278 0 00-.175-.348 1.518 1.518 0 00-.313-.313l-.26-.18c-.114-.08-.238-.163-.365-.252l-.344-.24c-.1-.071-.16-.11-.177-.12a1.058 1.058 0 01-.307-.326.437.437 0 01-.016-.388.434.434 0 01.172-.222.616.616 0 01.256-.087 1.09 1.09 0 01.29.016c.1.018.198.043.288.078.265.102.464.238.595.413.132.17.158.393.081.657l.768.294c.081-.21.105-.412.076-.604-.03-.192-.1-.375-.212-.542a1.854 1.854 0 00-.691-.603l.146-.38a.38.38 0 00-.225-.488.38.38 0 00-.493.212l-.145.377a2.002 2.002 0 00-.262-.048 1.82 1.82 0 00-.598.015c-.189.04-.358.115-.507.226a1.043 1.043 0 00-.342.47c-.04.105-.064.212-.071.326a.904.904 0 00.048.347c.04.12.107.237.204.359.098.122.233.242.402.359l.698.476c.191.126.35.247.49.357a.709.709 0 01.188.248c.048.103.044.23-.015.384a.583.583 0 01-.135.2.515.515 0 01-.235.13.951.951 0 01-.343.025 2.039 2.039 0 01-.867-.329c-.12-.082-.219-.18-.297-.286a.775.775 0 01-.139-.358.88.88 0 01.064-.424l-.764-.294a1.44 1.44 0 00-.093.702c.027.22.104.417.225.596.12.178.277.339.479.48.087.062.184.12.283.173l-.146.381a.38.38 0 00.225.487.38.38 0 00.493-.211l.14-.367c.112.03.23.056.344.071.226.035.44.033.645-.005.204-.038.386-.116.547-.235.16-.118.285-.291.37-.515.042-.108.064-.22.069-.339z"
                    fill="#fff"
                    fill-rule="evenodd"
                  />
                </g>
                <g>
                  <rect
                    fill="#629D00"
                    height="11.978"
                    rx="4"
                    stroke="#629D00"
                    transform="rotate(52 17.576 1)"
                    width="25.119"
                    x="17.576"
                    y="1"
                  />
                  <rect
                    fill="#69C800"
                    height="11.978"
                    rx="4"
                    transform="rotate(52 17.576 1)"
                    width="25.119"
                    x="17.576"
                    y="1"
                  />
                  <rect
                    fill="#AADE63"
                    height="9.512"
                    rx="4"
                    transform="rotate(52 17.25 2.759)"
                    width="23.026"
                    x="17.251"
                    y="2.759"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M20.264 5.127a4 4 0 00-5.615-.69l-.602.47a4 4 0 015.514.766l9.465 12.116a4 4 0 01-.69 5.614l-2.775 2.169c.034-.025.068-.05.102-.077l3.377-2.638a4 4 0 00.69-5.615L20.263 5.127z"
                    fill="#D6F4BC"
                    fill-rule="evenodd"
                  />
                  <ellipse
                    cx="15.595"
                    cy="8.391"
                    fill="#7ACE00"
                    rx="1.396"
                    ry="1.409"
                    transform="rotate(52 15.595 8.391)"
                  />
                  <ellipse
                    cx="25.588"
                    cy="21.127"
                    fill="#7ACE00"
                    rx="1.396"
                    ry="1.409"
                    transform="rotate(52 25.588 21.127)"
                  />
                  <ellipse
                    cx="20.593"
                    cy="14.934"
                    fill="#7ACE00"
                    rx="3.489"
                    ry="3.523"
                    transform="rotate(52 20.593 14.934)"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M21.467 16.57c.065-.1.112-.21.142-.33.029-.12.037-.25.028-.389a1.523 1.523 0 00-.107-.428c-.026-.058-.069-.156-.13-.289-.056-.127-.12-.263-.183-.404a77.632 77.632 0 00-.26-.577 1.058 1.058 0 01-.096-.438.437.437 0 01.186-.34.434.434 0 01.262-.102.618.618 0 01.264.057c.084.042.164.096.24.163.077.068.147.14.207.215.175.224.275.444.297.66.025.215-.067.42-.268.606l.506.648c.177-.138.303-.3.377-.48.073-.179.108-.371.097-.573a1.851 1.851 0 00-.282-.873l.321-.25a.38.38 0 00.058-.534.38.38 0 00-.531-.073l-.319.25a2.013 2.013 0 00-.2-.177 1.822 1.822 0 00-.52-.296 1.291 1.291 0 00-.551-.067c-.189.02-.367.096-.535.228a1.07 1.07 0 00-.229.242.898.898 0 00-.137.322c-.027.124-.031.258-.01.413.02.154.075.327.16.514.139.306.256.56.353.769.099.205.173.391.236.557a.709.709 0 01.033.31c-.012.113-.08.22-.21.321a.586.586 0 01-.22.103.515.515 0 01-.268-.01.948.948 0 01-.307-.155 2.033 2.033 0 01-.574-.728 1.243 1.243 0 01-.107-.4.775.775 0 01.066-.378.88.88 0 01.273-.33l-.504-.646a1.44 1.44 0 00-.44.554c-.09.202-.127.411-.115.626.012.216.063.434.163.659.043.098.097.197.154.294l-.322.251a.38.38 0 00-.058.534c.13.166.37.2.532.073l.31-.242c.08.084.168.166.257.238.175.145.36.255.555.327.194.073.391.1.59.08.199-.018.395-.102.583-.25.091-.071.168-.156.233-.255z"
                    fill="#fff"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
            $283.86
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400 StyledProps--font-variation-tiny"
          >
            ce.perspectives.recommendations.perMonth
          </p>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main chartGridContainer StyledProps--margin-xlarge StyledProps--background-white"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-small"
      >
        <div
          class="StyledProps--font StyledProps--main groupByContainer StyledProps--background-white StyledProps--padding-small"
        >
          <section
            class="groupByContainer"
          >
            <label
              class="groupByLabel"
            >
               
              ce.perspectives.createPerspective.preview.groupBy
            </label>
            <div
              class="groupBys"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="groupByItems"
                  >
                    Cluster
                  </div>
                </span>
              </span>
              <div
                class="groupByItems"
              >
                Region
              </div>
              <div
                class="groupByItems activeItem"
              >
                Product
              </div>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="groupByItems"
                  >
                    Label
                  </div>
                </span>
              </span>
            </div>
          </section>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            style="align-items: center; justify-content: flex-end;"
          >
            <span
              class="bp3-icon bp3-icon-timeline-area-chart StyledProps--main StyledProps--color StyledProps--color-grey400"
              icon="timeline-area-chart"
            >
              <svg
                data-icon="timeline-area-chart"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <desc>
                  timeline-area-chart
                </desc>
                <path
                  d="M19 16H2V3c0-.55-.45-1-1-1s-1 .45-1 1v14c0 .55.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1zm0-13.41l-7.07 7.07-4.3-3.44-.01.01A.987.987 0 007 6c-.24 0-.46.1-.63.24l-.01-.01L3 9.03V15h16V2.59z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-icon bp3-icon-timeline-bar-chart StyledProps--main StyledProps--color StyledProps--color-primary7"
              icon="timeline-bar-chart"
            >
              <svg
                data-icon="timeline-bar-chart"
                height="18"
                viewBox="0 0 16 16"
                width="18"
              >
                <desc>
                  timeline-bar-chart
                </desc>
                <path
                  d="M8 12h1c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1H8c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1zm5 0h1c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1h-1c-.55 0-1 .45-1 1v6c0 .55.45 1 1 1zm2 1H2c-.55 0-1 .45-1 1s.45 1 1 1h13c.55 0 1-.45 1-1s-.45-1-1-1zM3 12h1c.55 0 1-.45 1-1V7c0-.55-.45-1-1-1H3c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
        <div>
          <article>
            <mock
              options="[object Object]"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="spinner"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 36 36"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
                  stroke="currentColor"
                  stroke-dasharray="75,100"
                  stroke-linecap="round"
                  stroke-width="2.8"
                  style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
                />
              </svg>
            </span>
          </article>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main gridLoadingContainer"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          « no data »
        </p>
      </div>
    </div>
  </div>
</div>
`;
